tests/compile_fail/state_machine/non_inline_attr.rs
use moku::*;

#[state_machine]
mod dummy_mod;

fn main() {}
